* added workaround for invalid filter urls with `=&` characters * added option to encode filters as base64 string when sharing dashboard * fixed issue with invisible share button when opening the dashboard with filters

--- a/src/app/components/ui/share-dashboard/share-dashboard/share-dashboard.component.scss
+++ b/src/app/components/ui/share-dashboard/share-dashboard/share-dashboard.component.scss
@@ -44,3 +44,18 @@ textarea {
 button {
     width: 100%;
 }
+
+input {
+    min-width: 16px;
+    width: 16px;
+    display: inline-block;
+    margin: 0;
+    margin-right: 4px;
+    vertical-align: bottom
+}
+
+label {
+    display: block;
+    margin-bottom: 10px;
+    font-weight: normal;
+}
